2002-05-20  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tkMacInit.c:
	* mac/tkMacResource.r: include msgcat package in resources
	as bgerror depends on it. Restores ability of mac static
	build to run standalone (except for encoding file issues).

2002-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: change HP-11 SHLIB_LD_LIBS from "" to ${LIBS} so
	that the .sl knows its dependent libs.

2002-04-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:
	* win/tcl.m4: Enabled COFF as well as CV style debug info with
	--enable-symbols to allow Dr. Watson users to see function info.
	More info on debugging levels can be obtained at:
	http://msdn.microsoft.com/library/en-us/dnvc60/html/gendepdebug.asp

2002-04-10  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: Added missing $(TKSTUBLIB) to the
	install-binaries target and added a special rule for tkStubImg.c
	so it always is built with _DSTATIC_BUILD for use in the Stubs
	library.

2002-04-08  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkInt.h:
	* mac/tkMacAppInit.c: fixes to MSL stdin/stdout hookup to the
	TkConsole when using shared MSL libraries; fix for crashing
	bug on exit: writing to stdin/sterr when console has already
	been destroyed. (both fixes need support in MSL, see 
	'CW Pro6 changes' in tcl/mac/tcltkMacBuildSupport.sea.hqx)
	* mac/tkMacDialog.c: fixes to Navigation Services Dialog filter.
	* mac/tkMacDraw.c: add panic for overwide TkImages that would
	crash Tk on mac otherwise.

2002-03-26  Andreas Kupries  <andreask_kupries@users.sourceforge.net>

	* unix/tkUnixFont.c: Added inclusion of <arpa/inet.h>. This fixes
	  a GCC/HPUX problem with missing a "htons". See also
	  "tclUnixPort.h" for equivalent code.

2002-03-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: added shell and gdb targets, prevent
	tkIntXlibDecls.h header from being installed by install-libraries.
	* unix/configure: 